Issue #3178986 by mahmoud-zayed, AaronChristian: Broken style at Safari

--- a/css/themes/dark.css
+++ b/css/themes/dark.css
@@ -251,6 +251,7 @@
 
 #layout-builder-modal .details-wrapper {
   padding: 1rem;
+  display: block;
 }
 
 #layout-builder-modal summary {
@@ -264,12 +265,24 @@
   display: flex;
   align-items: center;
   background-color: transparent;
+  cursor: pointer;
+}
+
+#layout-builder-modal summary * {
+  cursor: pointer;
 }
 
 #layout-builder-modal summary img,
 #layout-builder-modal summary svg {
   margin-right: 1rem;
   width: 24px;
+}
+
+#layout-builder-modal summary img g,
+#layout-builder-modal summary img path,
+#layout-builder-modal summary svg g,
+#layout-builder-modal summary svg path {
+  fill: #ffffff;
 }
 
 #layout-builder-modal summary:after {
@@ -402,7 +415,7 @@
 #layout-builder-modal .fieldset-legend {
   font-size: .875rem;
   margin-bottom: 0.5rem;
-  display: block;
+  display: inline-block;
   font-weight: normal;
   color: rgba(255, 255, 255, 0.6);
 }
@@ -601,7 +614,7 @@
 #layout-builder-modal .inline-block-list li {
   display: flex;
   padding: 0 0.5rem 1rem 0.5rem;
-  width: 33%;
+  width: 50%;
 }
 
 #layout-builder-modal .inline-block-list__item {
@@ -617,19 +630,17 @@
   justify-content: center;
   border-radius: 0;
   min-height: 80px;
-}
-
-#layout-builder-modal .inline-block-list__item:before {
-  content: '';
-  display: none;
-  width: 30px;
-  height: 30px;
-  margin-bottom: .5rem;
-  border: 1px solid red;
+  border-radius: 8px;
+  border: 2px solid transparent !important;
 }
 
 #layout-builder-modal .inline-block-list__item:hover {
-  background: #4b515c !important;
+  border: 2px solid #41A5FF !important;
+}
+
+#layout-builder-modal .inline-block-list__item:focus {
+  color: #383A40 !important;
+  background-color: #41A5FF !important;
 }
 
 #layout-builder-modal textarea,
@@ -1212,6 +1223,7 @@
 
 #drupal-off-canvas .details-wrapper {
   padding: 1rem;
+  display: block;
 }
 
 #drupal-off-canvas summary {
@@ -1225,12 +1237,24 @@
   display: flex;
   align-items: center;
   background-color: transparent;
+  cursor: pointer;
+}
+
+#drupal-off-canvas summary * {
+  cursor: pointer;
 }
 
 #drupal-off-canvas summary img,
 #drupal-off-canvas summary svg {
   margin-right: 1rem;
   width: 24px;
+}
+
+#drupal-off-canvas summary img g,
+#drupal-off-canvas summary img path,
+#drupal-off-canvas summary svg g,
+#drupal-off-canvas summary svg path {
+  fill: #ffffff;
 }
 
 #drupal-off-canvas summary:after {
@@ -1363,7 +1387,7 @@
 #drupal-off-canvas .fieldset-legend {
   font-size: .875rem;
   margin-bottom: 0.5rem;
-  display: block;
+  display: inline-block;
   font-weight: normal;
   color: rgba(255, 255, 255, 0.6);
 }
@@ -1562,7 +1586,7 @@
 #drupal-off-canvas .inline-block-list li {
   display: flex;
   padding: 0 0.5rem 1rem 0.5rem;
-  width: 33%;
+  width: 50%;
 }
 
 #drupal-off-canvas .inline-block-list__item {
@@ -1578,19 +1602,17 @@
   justify-content: center;
   border-radius: 0;
   min-height: 80px;
-}
-
-#drupal-off-canvas .inline-block-list__item:before {
-  content: '';
-  display: none;
-  width: 30px;
-  height: 30px;
-  margin-bottom: .5rem;
-  border: 1px solid red;
+  border-radius: 8px;
+  border: 2px solid transparent !important;
 }
 
 #drupal-off-canvas .inline-block-list__item:hover {
-  background: #4b515c !important;
+  border: 2px solid #41A5FF !important;
+}
+
+#drupal-off-canvas .inline-block-list__item:focus {
+  color: #383A40 !important;
+  background-color: #41A5FF !important;
 }
 
 #drupal-off-canvas textarea,
@@ -3898,6 +3920,7 @@
 #layout-builder-modal .spacing-preview {
   padding: 1rem 1.5rem;
   margin: 1.5rem 0;
+  display: flex;
 }
 
 #drupal-off-canvas .spacing-preview .preview-box,
