--- a/scss/general-styles.scss
+++ b/scss/general-styles.scss
@@ -61,6 +61,8 @@
 
   .bs-group-title {
     margin-left: 15px;
+    display: flex;
+    align-items: center;
   }
 
   .sr-only {
