--- a/scss/themes/dialog/components/_off-canvas.form.scss
+++ b/scss/themes/dialog/components/_off-canvas.form.scss
@@ -43,12 +43,10 @@ label {
   }
 }
 
-
-
 .fieldset-legend {
   font-size: .875rem;
   margin-bottom: 0.5rem;
-  display: block;
+  display: inline-block;
   font-weight: normal;
   color: rgba($panel_text_color, .6);
 }
