--- a/scss/themes/plugins/_spacing.scss
+++ b/scss/themes/plugins/_spacing.scss
@@ -7,6 +7,7 @@
 .spacing-preview {
   padding: 1rem 1.5rem;
   margin: 1.5rem 0;
+  display: flex;
 
   // Shared preview box styles.
   .preview-box {
